Add files via upload
Fix swagger doc for ec2 instance
